src/force-app/main/default/objects/Contact_Type__c/Contact_Type__c.object-meta.xml
<CustomObject>
    <description>created as part of assignment</description>
    <label>Contact Type</label>
    <nameField>
        <label>Select Contact Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>