src/force-app/main/default/objects/Contact_Type__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>created as part of the assignment to link the related account for the contact type selected</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Types</relationshipLabel>
    <relationshipName>Contact_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>