src/force-app/main/default/objects/Contact_Type__c/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <description>created as part of the assignment that displays the of contacts for the related account</description>
    <label>Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>