src/force-app/main/default/objects/Contact_Type__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>created as part of the assignment that displays it from the table selection</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>