src/force-app/main/default/objects/Contact_Type__c/validationRules/Number_of_Contacts_cannot_exceeds_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Contacts_cannot_exceeds_5</fullName>
    <active>true</active>
    <description>created as part of assignment to display the error msg if no of contacts counts exceeds</description>
    <errorConditionFormula>Number_of_Contacts__c  &gt; 5 &amp;&amp;  Type__c !=null &amp;&amp;  State__c !=null</errorConditionFormula>
    <errorMessage>Contact count cannot exceed 5</errorMessage>
</ValidationRule>